--- a/style.css
+++ b/style.css
@@ -1,144 +1,161 @@
-@import url('https://fonts.googleapis.com/css2?family=Glory:wght@300&display=swap');
-
-* {
-    box-sizing: border-box;
-}
-
-html,
 body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
+    font-family: Verdana;
+    background:#E8E8E8; 
+    font-family:Tahoma, Geneva, sans-serif;
+    font-size:14px;
+    color:#828282;
+  }
+  
+.header {
+    padding: 80px; 
+    text-align: center; 
+    background: #fcd12a; 
+    color: white;
+  }
+  
+.header h1 {
+    font-size: 40px;
+  }
+.header p {
+    font-size: 30px;
 }
 
-body {
-    font-family: 'Glory', sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: linear-gradient(120deg,#3E5151,#DECBA4);
-    overflow: hidden;
+hr.rounded {
+  border-top: 8px solid #bbb;
+  border-radius: 5px;
 }
 
-input{
-    font-family: inherit;
-    border: 0;
-    border-bottom: 1px solid #aaa;
-    font-size: 16 px;
-    color: #000;
-    border-radius: 0;
-}
+.navbar {
+    overflow: hidden; /* ซ่อนไปไว้ข้างหลังตัวอักษร */
+    background-color: #9f7a39; 
+  }
+  
+.navbar a {
+    float: right; 
+    display: block;/*เมื่อชี้ไปที่ปุ่มจะแสดงการตอบสนอง*/
+    color: white; /*สีตัวอักษร*/
+    text-align: center; 
+    padding: 14px 20px;
+    text-decoration: none; /*ลบขีดเส้นใต้*/
+  }
+  
+  /* เปลี่ยนสีเมื่อวางเมาส์เหนือ/วางเมาส์เหนือ */
+.navbar a:hover {
+    background-color: #d4af37;
+    color: rgb(0, 0, 0); /*สีตัวอักษรเปลี่ยนเมื่อชี้เมาส์ที่ปุ่ม*/
+  }
 
-input[type="username"],
-input[type= "password"] {
-    width: 100%;
-height: 15px;
-}
 
-button,
-input:focus {
-    outline: 0;
-}
-
-
-.h1 {
-    color: #fff;
-    opacity: 0.8;
-    font-size: 20px;
-    font-weight: 400;
-    text-transform: uppercase;
-    letter-spacing: 0.2405em;
-    transition: 770ms cubic-bezier(0.51,0.04,0.12,0.99);
-    text-align: center;
-    cursor: pointer;
+  /* กำหนดdropdown ให้ซ่อน และกำหนดขนาดกล่อง*/
+.dropdown-content {
+    display: none;
     position: absolute;
-}
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
 
-.open .h1 {
-    transform: translateX(200px) translateZ(0);
-}
-
-.h2 {
-    color: #000;
-    font-size: 20px;
-    letter-spacing: -0.00933333em;
-    font-weight: 600;
-    padding-bottom: 15px;
-}
-
-.register-wrapper {
-    width: 800px;
-    height: 400px;
-    background-color: #fff;
-    box-shadow: 0px 2px 50px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
-    overflow: hidden;
-    position: relative;
-}
-
-.register-left {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition:770ms cubic-bezier(0.51,0.04,0.12,0.99);
-    overflow: hidden;
-}
-
-.register-left img {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
+  /* กำหนดในdropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
     display: block;
-    transform-origin:770ms cubic-bezier(0.51,0.04,0.12,0.99);
-    object-position: left;
-}
+  }
+.dropdown-content a:hover {background-color: #f1f1f1}
 
-.open .register-left img{
-    transform: translateX(280px) translateZ(0);
-}
-.open .register-left {
-    transform: translateX(-400px) translateZ(0);
-}
-
-.register-right {
-    padding: 40px;
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 400px;
-    transform: translateX(400px) translateZ(0); 
-    transition:770ms cubic-bezier(0.51,0.04,0.12,0.99);
-}
-
-.open .register-right {
-    transform: translateX(0) translateZ(0);
-}
-
-.button-area {
-    display: flex;
-    margin-top: 30px;
-
-}
-
-.btn {
-    font-family: inherit;
-    background-color: transparent;
-    border:none;
-    border-radius: 3px;
-    height: 25px;
-    display: flex;
-    padding: 0 25px;
-    cursor: pointer;
-    font-size: 18px;
-    text-transform: uppercase;
-    letter-spacing: -0.00933333em;
+.dropdown:hover .dropdown-content {
+  display: block;
 }
 
 
-.btn-secondary {
-    color: #fff;
-    background: linear-gradient(120deg, #3E5151, #DECBA4);
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+  /* ขนาดกล่อง */
+* {
+  box-sizing: border-box;
+}
+
+/* คอลัมน์ทางซ้าย */
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+/* สร้าง2คอลัมน์ */
+/* คอลัมน์ทางซ้าย */
+.left_side {
+  flex: 70%; /* กำหนดด้านกว้างของคอลัมน์ */
+  background-color: #f1f1f1; 
+  padding: 20px; /*ห่างจากขอบด้านซ้าน 20px*/
+}
+
+.footer {
+  padding: 20px; 
+  text-align: center; /* Center text*/
+  background: rgba(78, 171, 224, 0.911); 
+}
+
+html {
+  box-sizing: border-box;
+}
+
+/* *, *:before, *:after {
+  box-sizing: inherit;
+} */
+
+.column {
+  float: left;
+  width: 33.3%;
+  margin-bottom: 16px;
+  padding: 0 8px;
+}
+
+/* เงา */
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  margin: 8px;
+}
+
+.about-section {
+  padding: 50px;
+  text-align: center;
+  background-color: #474e5d;
+  color: white;
+}
+
+.container {
+  padding: 0 16px;
+}
+
+.container::after, .row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.title {
+  color: grey;
+}
+
+.button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+}
+
+.button:hover {
+  background-color: #555;
+}
+
+@media screen and (max-width: 650px) {
+  .column {
+    width: 100%;
+    display: block;
+  }
 }
